Update to 1.21.1 and refactor stuff. update 0.2